Updated public ns doc-string, upgraded Clojure and core.async versions in deps.